[workspace]
members = [
    "src/DX_Protocol_master",
    "src/DX_sub_nft_orders",
    "src/DX_sub_token_orders",
    "src/DX_indexer",
    "src/DX_Protocol_types",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
bytes = "1"
base64 = "0.21"
candid = "0.10"
ciborium = "0.2"
ciborium-io = "0.2"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
ic-cdk = "0.15"
ic-stable-structures = "0.6"
ic-cdk-macros = "0.8.0"
serde = "2"
serde_bytes = "0.11"
serde_json = { version = "1", features = ["preserve_order"] }
k256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = "2"
